test/scc/expr/semantic-errors/122.t
void test()
{
    int a[1] = { 0, 1};
}